--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 ::-webkit-scrollbar {
     width: 15px;
-    display: none;
+    /* display: none; */
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
     background: white;
-    display: none;
+    /* display: none; */
 }
 
 /* Handle */
@@ -14,7 +14,7 @@
     border: solid white 4px;
     border-radius: 10px;
     background: #d8dee9;
-    display: none;
+    /* display: none; */
 }
 
 /* Handle on hover */
@@ -23,14 +23,19 @@
 }
 
 body {
-    overflow: auto; /* Hide scrollbars */
+    overflow: hidden;
+    margin: 0;
+    padding: 0; 
 }
 
-div.ex3 {
-    /* width: 110px; */
-    height: 100%;
-    overflow: auto;
+.container {
+    position: fixed;
+    top: 50px;
+    bottom: 0;
+    overflow-y: scroll;
 }
+
+
 
 body {
     color: #4c566a;
